--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="PlugIoConnectorAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PlugIoConnectors.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PlugIoLineAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Connect2PipeCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PlugIoConnectors.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
