--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -170,7 +170,6 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="Scanner.h" />
     <ClInclude Include="Script.h" />
-    <ClInclude Include="ScriptStack.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ErrHndl.cpp" />
@@ -178,6 +177,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Script.cpp" />
     <ClCompile Include="Scanner.cpp" />
+    <ClCompile Include="ScriptStack.ixx" />
     <ClCompile Include="Symtab.cpp" />
     <ClCompile Include="Symtab.ixx" />
     <ClCompile Include="WrapBase.ixx" />
