--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -75,7 +75,6 @@
     <ClInclude Include="PlugIoConnectorAnimation.h" />
     <ClInclude Include="PlugIoLineAnimation.h" />
     <ClInclude Include="PlugIoLines.h" />
-    <ClInclude Include="SelSigGenClientsCmd.h" />
     <ClInclude Include="SetActiveSigGenCmd.h" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +146,7 @@
     <ClCompile Include="SelectNobCommand.ixx" />
     <ClCompile Include="SelectNobsInRectCommand.ixx" />
     <ClCompile Include="SelectSubtreeCommand.ixx" />
+    <ClCompile Include="SelSigGenClientsCmd.ixx" />
     <ClCompile Include="SetHighlightedNobCmd.ixx" />
     <ClCompile Include="SetNobCommand.ixx" />
     <ClCompile Include="SetParameterCommand.ixx" />
