--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClInclude Include="SetActiveSigGenCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SelSigGenClientsCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SelectSubtreeCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SelSigGenClientsCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
