--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -69,7 +69,6 @@
   <ItemGroup>
     <ClInclude Include="CommandFunctions.h" />
     <ClInclude Include="CommandStack.h" />
-    <ClInclude Include="ConnAnimationCommand.h" />
     <ClInclude Include="NNetCommand.h" />
     <ClInclude Include="SetActiveSigGenCmd.h" />
   </ItemGroup>
@@ -105,6 +104,7 @@
     <ClCompile Include="ConnAnimationCommand.cpp">
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</WholeProgramOptimization>
     </ClCompile>
+    <ClCompile Include="ConnAnimationCommand.ixx" />
     <ClCompile Include="Connect2BaseKnotCommand.ixx" />
     <ClCompile Include="Connect2PipeCommand.ixx" />
     <ClCompile Include="CoordAnimation.ixx" />
