--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="CommandStack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CommandFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="NNetCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConnAnimationCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandFunctions.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
