--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="Win32_BaseWindow.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_HiResTimer.cpp">
+    <ClCompile Include="Win32_HiResTimer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_Script.cpp">
@@ -38,7 +38,7 @@
     <ClCompile Include="Win32_Util.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_winManager.cpp">
+    <ClCompile Include="Win32_WinManager.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_BaseDialog.cpp">
@@ -53,7 +53,7 @@
     <ClCompile Include="Win32_Thread.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_textBuffer.cpp">
+    <ClCompile Include="Win32_TextBuffer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_Tooltip.cpp">
