--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -68,7 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NNetCommand.h" />
-    <ClInclude Include="SetActiveSigGenCmd.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddNobsCommand.ixx">
@@ -147,6 +146,7 @@
     <ClCompile Include="SelectNobsInRectCommand.ixx" />
     <ClCompile Include="SelectSubtreeCommand.ixx" />
     <ClCompile Include="SelSigGenClientsCmd.ixx" />
+    <ClCompile Include="SetActiveSigGenCmd.ixx" />
     <ClCompile Include="SetHighlightedNobCmd.ixx" />
     <ClCompile Include="SetNobCommand.ixx" />
     <ClCompile Include="SetParameterCommand.ixx" />
