--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -167,11 +167,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Input.h" />
-    <ClInclude Include="Scanner.h" />
-    <ClInclude Include="Script.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="ErrHndl.cpp" />
     <ClCompile Include="ErrHndl.ixx" />
     <ClCompile Include="Input.cpp" />
@@ -187,6 +182,11 @@
     <ProjectReference Include="..\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="Scanner.h" />
+    <ClInclude Include="Scipt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
