--- a/Toolbox/WinBasics/WinBasics.vcxproj
+++ b/Toolbox/WinBasics/WinBasics.vcxproj
@@ -23,6 +23,9 @@
     <ClCompile Include="Win32_PIXEL.ixx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\runtimeCPP\runtimeCPP.vcxproj">
+      <Project>{dd49b1e3-6916-4230-b2a7-9e16e6ecdf95}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
