--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -66,7 +66,6 @@
     <ClInclude Include="SimulationTime.h" />
     <ClInclude Include="Spike.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="tHighlightType.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="TrackNr.h" />
     <ClInclude Include="UPNobList.h" />
@@ -105,6 +104,7 @@
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="SignalFactory.cpp" />
     <ClCompile Include="SignalGenerator.cpp" />
+    <ClCompile Include="tHighlightType.ixx" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="UPNobList.cpp" />
     <ClCompile Include="UPSensorList.cpp" />
